Fix: Scrollbar (Story & Body)

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,8 @@
 body::-webkit-scrollbar {
-  width: 0px !important; /* width of the entire scrollbar */
+  /* width: 0px !important; width of the entire scrollbar */
+  height: 0px !important;
+}
+
+.story-container::-webkit-scrollbar {
   height: 0px !important;
 }
